@@ -1,3 +1,3 @@
 // PR c++/56534
 
-template < struct template rebind < > // { dg-error "expected" }
+template < struct template rebind < > // { dg-error "expected|must follow" }
