@@ -1,3 +1,9 @@
+2018-11-19  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/87781 - detect invalid elaborated-type-specifier.
+	* g++.dg/parse/elab3.C: New test.
+	* g++.dg/template/crash115.C: Adjust dg-error.
+
 2018-11-19  Peter Bergner  <bergner@linux.ibm.com>
 
 	PR rtl-optimization/88033
