@@ -1,3 +1,9 @@
+2018-11-19  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/87781 - detect invalid elaborated-type-specifier.
+	* parser.c (cp_parser_elaborated_type_specifier): Ensure that
+	typename follows a nested-name-specifier.
+
 2018-11-18  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* decl2.c (grokfield): Remove obsolete _vptr check; fix
